--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -12,11 +12,11 @@ header {
   padding: 20pxxs;
 }
 
-header .h1 {
+header h1 {
   color: #25272e;
+  background-color: #125cfcc8;
   text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: sans-serif;
 }
 
 .score-board {
